--- a/Barlinek_raport.tex
+++ b/Barlinek_raport.tex
@@ -12,6 +12,10 @@
 \usepackage{url} % Provides better formatting of URLs.
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables for horizontal lines
 \usepackage{graphicx}
+\graphicspath{.}
+
+\usepackage{subfig}
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -22,7 +26,7 @@
 
 \usepackage{lipsum}
 
-\graphicspath{.}
+
 
 
 \hyphenation{op-tical net-works semi-conduc-tor} % Corrects some bad hyphenation 
@@ -30,6 +34,8 @@
 
 
 \begin{document}
+
+
 %\begin{titlepage}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
@@ -80,76 +86,118 @@ This will be a revised version of the problem definition in your proposal.
 % Note that IEEE typically puts floats only at the top, even when this
 % results in a large percentage of a column being occupied by floats.
 
-\section{Metodyka badań - pre-processing, processing}
-This may be a modified version of your proposal depending on previously carried out research or any feedback received.  
-\subsection{Warunki brzegowe, geometria}
-Describe your first solution here.
+\section{Metodyka badań}
+  
+\subsection{Założenia projektowe}
+nieściśliwość, przepływ laminarny, gładkie ścianki, przeływ jednofazowy --> uzasadnienie: badania miały na celu ukazanie najlepszego pod względem przepływowym wariantu geometrycznego, dlatego poczynione uproszczenia są uzasadnione
+\subsection{Warunki brzegowe}
+tutaj rysunek przekładki z rozpisanymi warunkami brzegowymi plus każdy opisać: jaka wartość prędkości na wylocie, kierunek, warunek ciśnieniowy na wylocie, no-slip wall  
 \subsection{Siatka obliczeniowa}
-Describe your second solution here.
+Screeny siatki, parametry siatki (ortogonalność, skewness, quality determinant?), liczba i typy elementów,
 \subsection{Model analityczny, model turbulencji}
-\subsection{Parametry solvera numerycznego??}
-
-opisuje się solver w takich przypadkach? może grafiki resiudów?
+równania ciągłosci i pędu, równania dla k-omega SST w ramach cytowania, uzasadnienie wyboru k-omega SST 
+\subsection{Parametry solvera numerycznego}
+specjalnie wyselekcjonowany schemat numeryczny dedykowany dla nieściśliwych przepływów stancjonarych cieczy newtonowskich, 
 
 
 
 \section{Wyniki badań CFD} \label{sec:criteria}
+
 \subsection{Rozkłady prędkości na wlocie, w połowie długości przekładki i na wylocie}
 tutaj obrazki przekrojów z CFD, wykresy rozkładu, 
 
-wartości area weighted average prędkości??
-
-\subsection{Rozkłady prędkości i ciśnienia wzdłuż przekładek}
-
-oprócz obrazków tutaj by trzeba oszacować jakiś parametr mówiący miejscach stangnacji --> proponuję obliczyć procent objętości przestrzeni w zakładce, w której prędkość jest równa zero, inne propozycje? wyniki zestawić w tabeli
-
-
-
-\section{Walidacja obliczeń numerycznych}
-tu w sumie nie wiem co napsać, bo raport nie obejmował eksperymentu
-%\begin{itemize}
-%\item Relevance to the context of application  
-%\end{itemize}
- 
-
-
-\section{Analiza i interpetacja wyników badań}
-
-która najlepsza, która najgorsza 
+\begin{figure*}
+  \centering
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 1}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_inlet_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_middle_plane_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_outlet_velocity}}\par
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 2}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_inlet_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_middle_plane_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_outlet_velocity}}\par
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 3}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_inlet_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_middle_plane_velocity}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_outlet_velocity}}
+  \caption{Fields}
+  \label{abc}
+\end{figure*}
 
 
-wzór tabeli (zostawiam sobie, może się przyda):
 
-% Example of a table from http://www.latextemplates.com/template/professional-table
-\begin{table} % Add the following just after the closing bracket on this line to specify a position for the table on the page: [h], [t], [b] or [p] - these mean: here, top, bottom and on a separate page, respectively
-\centering % Centers the table on the page, comment out to left-justify
-\begin{tabular}{l c c c c c} % The final bracket specifies the number of columns in the table along with left and right borders which are specified using vertical bars (|); each column can be left, right or center-justified using l, r or c. To specify a precise width, use p{width}, e.g. p{5cm}
-\toprule % Top horizontal line
-& \multicolumn{5}{c}{Growth Media} \\ % Amalgamating several columns into one cell is done using the \multicolumn command as seen on this line
-\cmidrule(l){2-6} % Horizontal line spanning less than the full width of the table - you can add (r) or (l) just before the opening curly bracket to shorten the rule on the left or right side
-Strain & 1 & 2 & 3 & 4 & 5\\ % Column names row
-\midrule % In-table horizontal line
-GDS1002 & 0.962 & 0.821 & 0.356 & 0.682 & 0.801\\ % Content row 1
-NWN652 & 0.981 & 0.891 & 0.527 & 0.574 & 0.984\\ % Content row 2
-PPD234 & 0.915 & 0.936 & 0.491 & 0.276 & 0.965\\ % Content row 3
-JSB126 & 0.828 & 0.827 & 0.528 & 0.518 & 0.926\\ % Content row 4
-JSB724 & 0.916 & 0.933 & 0.482 & 0.644 & 0.937\\ % Content row 5
-\midrule % In-table horizontal line
-\midrule % In-table horizontal line
-Average Rate & 0.920 & 0.882 & 0.477 & 0.539 & 0.923\\ % Summary/total row
-\bottomrule % Bottom horizontal line
+\subsection{Ocena nierównomierności rozkładu prędkości}
+
+
+
+
+
+\subsection{Rozkład energii kinetycznej turbulencji}
+Napisać co to ta energia kienetyczna turb.
+
+\begin{figure*}
+  \centering
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 1}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_inlet_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_middle_plane_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_01_outlet_turb_k}}\par
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 2}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_inlet_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_middle_plane_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_02_outlet_turb_k}}\par
+  \raisebox{5pt}{\parbox[b]{.1\textwidth}{wariant 3}}%
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_inlet_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_middle_plane_turb_k}}\hfill
+  \subfloat[][]{\includegraphics[width=.28\textwidth]{case_03_outlet_turb_k}}
+  \caption{Fields}
+  \label{subplots1310}
+\end{figure*}
+
+
+
+\subsection{Współczynnik strat ciśnienia}
+
+Obliczenia zostały wykonane przy następujących założeniach:
+\begin{itemize}
+\item średnia prędkość w kanale: 2 m/s
+\item gęstość płynu: 1 kg/m$^3$
+\item długość przekładki: 1,1 m
+\end{itemize}
+
+//wzory tutaj napisać??
+
+\begin{table}[]
+\begin{tabular}{|l|l|l|l|}
+\hline
+ & wariant 1 & wariant 2 & wariant 3 \\ \hline
+całkowita strata ciśnienia w kanale {[}Pa{]} & 16.73 & 13.62 & 14.73 \\ \hline
+strata ciśnienia w przeliczeniu na metr długości {[}Pa/m{]} & 15.21 & 12.38 & 13.39 \\ \hline
+współczynnik strat ciśnienia {[}-{]} & 6.08 & 4.95 & 5.36 \\ \hline
 \end{tabular}
-\smallskip 
-\caption{Some impressive numbers} % Table caption, can be commented out if no caption is required
-\label{tab:template} % A label for referencing this table elsewhere, references are used in text as \ref{label}
 \end{table}
-A reference to Table \ref{tab:template}.
+
+\subsection{Analiza naprężeń na dolnej ściance}
+
+Opisać w którym miejscu i jak wyznaczono rozkład tych naprężeń. I o czym mówią te naprężenia. 
+
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.8\columnwidth]{wall_shear} 
+\caption{Simulation Results}
+\label{fig_sim}
+\end{figure} 
+
+\section{Interpretacja wyników i wnioski}
+
+ogólnie 1 najlepszy, potem porównać 2 i 3 który lepszy (2 najlepszy w wykonaniu), porównanie w formie tabeli??
 
 \section{Propozycja poszerzenia badań}
 
-czyli badania na całej komorze
-
-
+\begin{itemize}
+\item analiza przepływu przy zablokowanym wylocie (dosunięcia przekładek do ściany)
+\item wykonanie nowego wariantu geometrycznego polegjącego na umieszczeniu otworów między poszczególymi przekładkami
+\item analiza przepływu powietrza w całej komorze
+\end{itemize} 
 
 
 %\appendices
